# ARIAC_2023

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  cnn.ipynb  package.xml
config/: group3_sensors.yaml  sensors.yaml
document/: instructions.txt
etc/: instructions.txt  rwa3.yaml
include/group3/: ariac_competition.hpp  ceiling_robot.hpp  floor_robot.hpp  map_poses.hpp  part_detect_type.hpp  part_type_detect.hpp  rwa1.hpp  tray_id_detect.hpp
launch/: group3.launch.py
msg/: Part.msg  Parts.msg
nodes/: image_saver.py  image_segment.py  part_detector.py
src/: ariac_competition.cpp  ariac_competition_main.cpp  ceiling_robot.cpp  floor_robot.cpp  map.cpp  map_poses.cpp  part_type_detect.cpp  rwa1.cpp  tray_id_detect.cpp
srv/: FloorChangeGripper.srv  FloorPickPartConv.srv  FloorPickTray.srv  FloorPlacePart.srv
