<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>group3</name>
  <version>0.0.0</version>
  <description>ENPM 663 ARIAC Project Package Group 3</description>
  <maintainer email="sanchit@terpmail.umd.edu">Sanchit Kedia</maintainer>
  <maintainer email="TODO@terpmail.umd.edu">Adarsh Malapaka</maintainer>
  <maintainer email="TODO@terpmail.umd.edu">Tanmay Haldankar</maintainer>
  <maintainer email="TODO@terpmail.umd.edu">Sahruday Patti</maintainer>
  <maintainer email="kshitij@umd.edu">Kshitij Karnawat</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
